feat: migrate admin datasets to server-side pagination
